# opencv_labs

./: .~lock.ЛАБОРАТОРНАЯ РАБОТА 2.odt#  CMakeLists.txt  blending.cpp  lab1.cpp  lab2.cpp  main.cpp  opencv_version.cpp  tank.cpp  ЛАБОРАТОРНАЯ РАБОТА 2.odt
lab1/: Lab1.doc
lab1/src/: blending.cpp  tank.cpp
lab2/src/: lab2.cpp
lab3/src/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
lab4/: task1.cpp
lab_exp/ocv21labs-main/Lab 1/blender/: CMakeLists.txt
lab_exp/ocv21labs-main/Lab 2/main_task/: ManyImg.hpp  lab2.cpp
matvey/ocv21labs-main/Lab 1/blender/: blender.cpp
matvey/ocv21labs-main/Lab 1/main_task/: CMakeLists.txt  lab1.cpp
matvey/ocv21labs-main/Lab 1/multibody/: CMakeLists.txt  multibody.cpp
matvey/ocv21labs-main/Lab 2/main_task/: CMakeLists.txt  ManyImg.cpp
matvey/ocv21labs-main/lab5/: main.cpp
vlad/cv_labs/lab_1/: CMakeLists.txt
vlad/cv_labs/lab_1/src/: blending.cpp  planets.cpp  tank.cpp  task1.cpp
vlad/cv_labs/lab_2/: CMakeLists.txt
vlad/cv_labs/lab_2/src/: box_filter.cpp  main.cpp
vlad/cv_labs/lab_3/: CMakeLists.txt
vlad/cv_labs/lab_3/src/: task3.cpp  task4.cpp
vodim/: lab1.cpp  lab2.cpp
лаб 1/Misc/: Adding (blending) two images using OpenCV — OpenCV 2.4.13.2 documentation.mht  Basic Drawing — OpenCV 2.4.13.2 documentation.mht  Changing the contrast and brightness of an image! — OpenCV 2.4.13.2 documentation.mht  Discrete Fourier Transform — OpenCV 2.4.13.2 documentation.mht  File Input and Output using XML and YAML files — OpenCV 2.4.13.2 documentation.mht  How to build applications with OpenCV inside the Microsoft Visual Studio — OpenCV 2.4.13.2 documentation.mht  How to scan images, lookup tables and time measurement with OpenCV — OpenCV 2.4.13.2 documentation.mht  Introduction — OpenCV 2.4.13.2 documentation.mht  Load and Display an Image — OpenCV 2.4.13.2 documentation.mht  Load, Modify, and Save an Image — OpenCV 2.4.13.2 documentation.mht  Mask operations on matrices — OpenCV 2.4.13.2 documentation.mht  Mat - The Basic Image Container — OpenCV 2.4.13.2 documentation.mht  Random generator and text with OpenCV — OpenCV 2.4.13.2 documentation.mht
