cmake_minimum_required(VERSION 3.0)
project( opencv_labs )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( lab1_main lab1.cpp )
add_executable( lab1_tank tank.cpp )
add_executable( lab1_blend blending.cpp )
add_executable( lab2_main lab2.cpp )
add_executable( vlad3_1 vlad/cv_labs/lab_3/src/task1.cpp )
add_executable( vlad3_2 vlad/cv_labs/lab_3/src/task2.cpp )
add_executable( vlad3_3 vlad/cv_labs/lab_3/src/task3.cpp )
add_executable( vlad3_4 vlad/cv_labs/lab_3/src/task4.cpp )

target_link_libraries( lab1_main ${OpenCV_LIBS} )
target_link_libraries( lab1_tank ${OpenCV_LIBS} )
target_link_libraries( lab1_blend ${OpenCV_LIBS} )
target_link_libraries( lab2_main ${OpenCV_LIBS} )
target_link_libraries( vlad3_1 ${OpenCV_LIBS} )
target_link_libraries( vlad3_2 ${OpenCV_LIBS} )
target_link_libraries( vlad3_3 ${OpenCV_LIBS} )
target_link_libraries( vlad3_4 ${OpenCV_LIBS} )
