cmake_minimum_required(VERSION 3.0)
project( opencv_labs )
set(OpenCV_DIR /home/pesta/Downloads/opencv3.4.1/build/)
find_package(OpenCV REQUIRED PATHS "/home/pesta/Downloads/opencv3.4.1/build/")

add_executable( lab1_main lab1/src/lab1.cpp )
add_executable( lab1_tank lab1/src/tank.cpp )
add_executable( lab1_blend lab1/src/blending.cpp )
add_executable( lab2_main lab2/src/lab2.cpp )
add_executable( lab3_1 lab3/src/task1.cpp )
add_executable( lab3_2 lab3/src/task2.cpp )
add_executable( lab3_3 lab3/src/task3.cpp )
add_executable( lab3_4 lab3/src/task4.cpp )
add_executable( mat_5 matvey/ocv21labs-main/lab5/main.cpp )
add_executable( calib opencv_calib_camera.cpp )
add_executable( gen generator.cpp )
add_executable( marker create_marker.cpp )
add_executable(detect detect_marker.cpp)
add_executable( opencv_version opencv_version.cpp )

target_link_libraries( mat_5 ${OpenCV_LIBS} )
target_link_libraries( lab1_main ${OpenCV_LIBS} )
target_link_libraries( lab1_tank ${OpenCV_LIBS} )
target_link_libraries( lab1_blend ${OpenCV_LIBS} )
target_link_libraries( lab2_main ${OpenCV_LIBS} )
target_link_libraries( lab3_1 ${OpenCV_LIBS} )
target_link_libraries( lab3_2 ${OpenCV_LIBS} )
target_link_libraries( lab3_3 ${OpenCV_LIBS} )
target_link_libraries( lab3_4 ${OpenCV_LIBS} )
target_link_libraries( opencv_version ${OpenCV_LIBS} )

target_link_libraries( calib ${OpenCV_LIBS} )
target_link_libraries( gen ${OpenCV_LIBS} )
target_link_libraries( marker ${OpenCV_LIBS} )

target_link_libraries( detect ${OpenCV_LIBS} )